# picogen

./: .gitignore  BUILD-TROUBLESHOOTING  CHANGES.txt  LICENSE  README  TODO  prepare.sh
src/: .gitignore  CMakeLists.txt  Makefile  Makefile.am  README  bootstrap  configure.ac  cosygui-filelist.am  filelist.am  flags.am  gen-file-list  license-header  old.Makefile
src/actuarius/: actuarius.hh
src/actuarius/bits/: iarchive.hh  name_ref_pair.hh  oarchive.hh  ptr_containerref_pair.hh
src/app/mkheightmap/: .gitignore
src/app/mkheightmap-qt/: .gitignore  main.cpp  mkheightmapqt.desktop  mkheightmapqt.pro  mkheightmapqt_harmattan.desktop
src/aux/quatsch/: format-task-force
src/aux/xyto/: .gitignore  parameter.cc  parameterlist.cc  parameterlist.hh  parse_expr.hh  parse_helpers.hh  pattern.cc  pattern.hh  production_header.cc  soft_value.hh  tokenize.hh
src/auxiliary/: README  heightmap.h
src/auxiliary/actuarius/: actuarius.hh
src/auxiliary/glimpse/: computationtime.hh  stopwatch.hh
src/auxiliary/quatsch/: README-IMPORTANT
src/auxiliary/quatsch-preprocessor/: include.cmake  ios.cc  ios.hh  main.cc  meta.cc  meta.hh  optional.hh  parsing.cc  parsing.hh  tuple.hh
src/auxiliary/special_ptr/: soft_value.hh
src/auxiliary/xyto/: CMakeLists.txt  compiler.cc  interpreter.cc  lsystem.cc  lsystem.hh  parameter.cc  parameter.hh  parse_expr.cc  production.cc  production.hh  segment.cc  token.hh  xyto_ios.cc  xyto_ios.hh
src/cosyscene/: camera.cc  camera.hh  color.cc  color.hh  cosyfloat.cc  cosyfwd.hh  direction3d.hh  filmsettings.cc  float_compare.hh  geometry.cc  geometry.hh  navigation.cc  navigation.hh  point3d.cc  point3d.hh  rendersettings.cc  rendersettings.hh  save_load.cc  save_load.hh  scene.cc  scene.hh  sunsky.hh  surfaceintegrator.cc  vector3d.cc  vector3d.hh  water.cc  water.hh
src/cosyscene/serialization/: color.ser.hh  navigation.ser.hh  rendersettings.ser.hh  scene.ser.hh  stash.ser.hh  sunsky.ser.hh  surfaceintegrator.ser.hh  terrain.ser.hh  vector3d.ser.hh
src/gtodo/: picogen
src/gui/BatchRenderer/: BatchRenderer.pro  job.cc  renderjobwidget.cc
src/gui/CosyGui/: CosyGui.pro  camerawidget.cc  camerawidget.hh  camerawidget.ui  cosyscene.pri  createredshiftsceneclosure.h  createredshiftsceneclosure.hh  filmsettingsandcamera.cc  filmsettingsandcamera.hh  filmsettingsandcamera.ui  filmsettingswindow.cc  filmsettingswindow.hh  filmsettingswindow.ui  main.cc  mainwindow.cc  mainwindow.h  mainwindow.hh  mainwindow.ui  material-ui.cc  material-ui.hh  material-ui.ui  material.cc  material.hh  navigationwindow.cc  navigationwindow.h  navigationwindow.hh  navigationwindow.ui  rendersettingswindow.cc  rendersettingswindow.hh  rendersettingswindow.ui  resources.qrc  startpopup.cc  startpopup.h  startpopup.ui  stashframe.cc  stashframe.h  stashframe.hh  stashframe.ui  stashview.cc  stashview.h  (+28 more)
src/gui/Repository/: Repository.pro  collection.cc  collection.hh  database.cc  database.hh  entityui.cc  entityui.hh  entityui.ui  main.cpp  mainwindow.cc  mainwindow.hh  mainwindow.ui  optional.h  package.cc  package.hh  parametricpreset.cc  parametricpreset.hh  parametricpresetpopup.cc  parametricpresetpopup.hh  parametricpresetpopup.ui  parametricpresetsui.cc  parametricpresetsui.hh  parametricpresetsui.ui  parametricpresetui.cc  parametricpresetui.hh  parametricpresetui.ui  repositorymainwindow.cc  repositorymainwindow.hh  repositorymainwindow.ui  shared_ptr.hh
src/gui/RepositorySettings/: repositorysettings.cc  repositorysettings.hh
src/gui/SimplexGui/: coloredit.cpp  coloreditfactory.h  coloreditmanager.cpp  coloreditmanager.h  mainwindow.cc  mainwindow.hh
src/gui/StyleDemo/: bar.hh  foo.cc  mainwindow.ui
src/gui/widgets/: widgets.cmake
src/help-content-downloader/: download.hh  main.cc
src/kallisto/: common.hh
src/kallisto/metamath/: bitwise.hh
src/kallisto/rng/: kiss.hh  mt.hh
src/kallisto/testing/: unit_test.hh
src/kallisto/traits/: ray_traits.hh  traits.hh
src/kallisto/types/: aabb.hh  array.hh  plane.hh  ray.hh  transform.hh
src/lib/libimage/: .gitignore
src/lib/libquatsch/: .gitignore
src/libcolor/src/: color.h
src/libdraw/: .gitignore
src/libdraw/src/: algorithm.h  indexer.h  surface.h  test.cc
src/libimage/src/: algorithm.h  indexer.h  ppm.h  test.cc
src/libmath/src/: libmath.h
src/libppm/src/: test.cc
src/libquatsch/src/: DynamicVariant.h  ErrorState.cc  compile_phase3_program.h  main.cc
src/picogen/cosyscene/: color.hh  cosyfloat.hh  cosyfwd.hh  direction3d.cc  filmsettings.cc  filmsettings.hh  material.cc  material.hh  point3d.hh  scene.cc  scene.hh  stash.hh  sunsky.cc  surfaceintegrator.hh  terrain.cc  terrain.hh
src/picogen/cracker/: CrackerRenderer.pro  aabb.cc  aabb.h  algorithm.h  color.cc  color.h  constants.h  differentialgeometry.cc  differentialgeometry.h  direction.cc  direction.h  intersection.cc  intersection.h  interval.cc  interval.h  main.cc  mainwindow.cc  material.h  math3d.h  pixel.h  point.h  potentialintersection.cc  potentialintersection.h  potentialinterval.cc  potentialinterval.h  presentationfilter.cc  presentationfilter.h  random.h  ray.h  real.h  render.h  render.inc.h  renderer.cc  renderer.h  rendertarget.cc  rendertarget.h  rendertargetrow.h  renderwidget.cc  renderwidget.h  renderwidget.ui  (+8 more)
src/picogen/redshift/: include.cmake
src/picogen/redshift_file/: include.cmake
src/picogen/repository/: collection.cc  (+9 more)
src/redshift/: Makefile  a-canyon-scape.red  boost-libs.sh  machine-linker-settings.sh
src/scripts/: gcc-version-at-least.cc  gcc-version-at-least.sh
src/upstream/: Makefile  README  wget-everything.sh
src/xyto/: codeiterator.hh  compiler.cc  constant.hh  draw.hh  interpreter.cc  kiss.hh  lsystem.cc  lsystem.hh  main.cpp  parameter.cc  parameter.hh  parse_expr.cc  pattern.cc  pattern.hh  production.cc  production.hh  production_body.cc  production_body.hh  production_header.cc  production_header.hh  segment.cc  segment.hh  soft_value.hh  symbol.cc  symbol.hh  token.cc  token.hh  tokenize.cc  turtle.hh  turtlematrix.hh  turtlevector.hh  xyto_ios.cc  xyto_ios.hh
(+2433 files in other folders)
